--- a/sociaBook_Project/apps/core/templates/core/base.html
+++ b/sociaBook_Project/apps/core/templates/core/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sociaBook</title>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
 </head>
 <body>
@@ -19,11 +20,24 @@
                 <span aria-hidden = "true"></span>
             </a>
         </div>
+
+        <div class="navbar-menu">
+            <div class="navbar-end">
+                <div class="navbar-item">
+                    <div class="buttons">
+                        <a href="{% url 'signup'%}"  class="button is-success"><strong>SIGNUP</strong></a>
+                        <a   class="button is-light">LOGIN</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </nav>
 
 
 
-    <section class="content">
+    <section class="section">
 
         {% block content %}
         {% endblock %}
