--- a/sociaBook_Project/apps/core/templates/core/login.html
+++ b/sociaBook_Project/apps/core/templates/core/login.html
@@ -4,10 +4,8 @@
     <div class="container">
         <div class="columns">
             <div class="column is-12">
-                <h1 class="title">Inspire and Influence</h1>
+                <h1>LOgin Page</h1>
             </div>
-                
         </div>
     </div>
-
 {% endblock %}
