--- a/sociaBook_Project/apps/core/templates/core/base.html
+++ b/sociaBook_Project/apps/core/templates/core/base.html
@@ -28,6 +28,10 @@
 
         <div class="navbar-menu">
             <div class="navbar-end">
+                {% if request.user.is_authenticated %}
+                        <a href="{%url 'feed' %}" class = navbar-item>Feed</a>
+                {% endif %}
+
                 <div class="navbar-item">
                     <div class="buttons">
                         {% if request.user.is_authenticated %}
